# pdg2025-fcen-uba-TP-1

qt/: DGP2025-A1.pro
src/: CMakeLists.txt
src/io/: Loader.hpp  LoaderStl.cpp  LoaderStl.hpp  LoaderWrl.hpp  Saver.hpp  SaverStl.cpp  SaverStl.hpp  SaverWrl.hpp
src/test/: CMakeLists.txt
src/testFaces/: CMakeLists.txt  dgpTestFaces.cpp
src/util/: StaticRotation.cpp
src/wrl/: IndexedFaceSet.hpp
